[gd_scene load_steps=6 format=2]

[ext_resource path="res://Teko-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
margin_left = -1.0
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 598.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 347.0
margin_top = 134.0
margin_right = 629.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
text = "Deeper and Deeper Race"

[node name="PlayGame" type="Button" parent="."]
margin_left = 424.0
margin_top = 235.0
margin_right = 539.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 2 )
text = "Play Game"

[node name="ExitGame" type="Button" parent="."]
margin_left = 428.0
margin_top = 321.0
margin_right = 536.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 3 )
text = "Exit Game"

[connection signal="pressed" from="PlayGame" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_ExitGame_pressed"]
